--- a/minima.theme.css
+++ b/minima.theme.css
@@ -1,21 +1,30 @@
+/**
+* @name Utility #01 - Minima
+* @author biggest_brian
+* @version 0.2.1
+* @description "It's free real estate"
+* @source https://github.com/aryanjassal/accord
+*/
+
 /* Feel free to modify these variables. */
 :root {
   --sidebar-collapsed: 64px;
-  --sidebar-extended: 240px;
+  --sidebar-expanded: 240px;
+  --memberlist-collapsed: 64px;
+  --memberlist-expanded: 240px;
   --background-ping: rgb(91, 45, 45);
 }
 
 /* Hide less used option to disable krisp voice suppression */
-button[aria-label="Noise Suppression powered by Krisp"] { display: none; }
-
-/* 
-  Badass code starts here!
-  Turn back if you aren't prepared.
-*/
+button[aria-label="Noise Suppression powered by Krisp"] {
+  display: none;
+}
 
 /* Hide discord nitro advertisements */
-a[data-list-item-id*="shop"] { display: none; }
-a[data-list-item-id*="nitro"] { display: none; }
+a[data-list-item-id*="shop"],
+a[data-list-item-id*="nitro"] {
+  display: none;
+}
 
 /* Hide useless buttons in chatbox to give more room for chats */
 .buttons_d0696b > button[aria-label="Send a gift"],
@@ -34,7 +43,9 @@ a[data-list-item-id*="nitro"] { display: none; }
 }
 
 /* Make servers page sidebar not wrap the text when collapsing */
-.wrappedName_d808b0 { white-space: nowrap; }
+.wrappedName_d808b0 {
+  white-space: nowrap;
+}
 
 /* 
   Add extra padding to all elements in server channels to make it consistent when
@@ -47,14 +58,14 @@ ul[aria-label="Channels"] > li > div > .basicChannelRowLink_d8bfb3 {
   margin: 0 4px;
 }
 
-ul[aria-label="Channels"] > li > div > .basicChannelRowLink_d8bfb3 {
-  padding-left: 13px;
+.hubContainer_ee69e0 > li > div {
+  margin-left: 14px;
+  margin-right: 4px;
 }
 
 ul[aria-label="Channels"] > li > div.iconVisibility_a08117 {
   margin-left: 6px;
 }
-
 
 .linkTop_d8bfb3 > .iconContainer_d8bfb3 {
   margin: 0 6px;
@@ -65,8 +76,8 @@ ul[aria-label="Channels"] > li > div.iconVisibility_a08117 {
   look weird
 */
 ul[aria-label="Channels"] > li > div.list_a478e5,
-ul[aria-label="Channels"] > li > ul { 
-  margin-left: 12px; 
+ul[aria-label="Channels"] > li > ul {
+  margin-left: 12px;
 }
 
 ul[aria-label="Channels"] > li > .container_c75f85 {
@@ -77,13 +88,66 @@ ul[aria-label="Channels"] > li > .container_c75f85 {
   Center the server "badge" (next to the server name) so its consistent when the sidebar
   collapses
 */
-.guildIconV2Container_ed9816 { margin-left: 10px; }
+.guildIconV2Container_ed9816 {
+  margin-left: 10px;
+}
 
 /* Disable the dropdown arrow next to the server name and details */
-svg.dropdownButton_ee69e0 { display: none; }
+svg.dropdownButton_ee69e0 {
+  display: none;
+}
 
 .wrapper_adcaac > .container_adcaac > .connection_adcaac > .inner_adcaac {
-  min-width: calc(var(--sidebar-collapsed) - 14px);
+  /* min-width: calc(var(--sidebar-collapsed) - 14px); */
+}
+
+div[class^="actionButtons_"] {
+  display: flex;
+}
+
+.connection_adcaac > * {
+  transition: height 0.2s ease-in-out;
+}
+
+.bar_eba0ba > div {
+  display: none;
+}
+
+.bar_eba0ba > svg {
+  padding: 4px;
+  margin: 0;
+}
+
+div[class^="actionButtons_"],
+.wrapper_adcaac > * {
+  transition: 0.2s ease-in-out;
+}
+
+.iconContainer_d8bfb3 {
+  margin: 0 6px;
+}
+
+div[class^="actionButtons_"] {
+  height: 0;
+  overflow: hidden;
+  padding: 0;
+}
+
+div.activityPanel_a4d4d9 {
+  padding: 0 8px;
+  transition: 0.2s ease-in-out;
+  height: 0;
+  overflow: hidden;
+}
+
+.panels_a4d4d9:has(.wrapper_adcaac:hover) .panel_bf1a22 {
+  height: 32px;
+  padding: 8px;
+}
+
+.wrapper_adcaac:hover > .container_adcaac > div[class^="actionButtons_"] {
+  height: 36px;
+  padding-top: 4px;
 }
 
 div[class^="sidebar_"] {
@@ -94,24 +158,25 @@ div[class^="sidebar_"] {
   display: none;
 }
 
-.headerText_c47fa9 {
-  visibility: hidden;
+.avatarWrapper_b2ca13 {
+  transition: 0.2s ease-in-out;
 }
 
-@media screen and (min-width: 801px) {
-  .headerText_c47fa9:before {
-    content: "Direct Messages";
-    visibility: visible;
+@media screen and (max-width: 900px) {
+  .headerText_c47fa9 {
+    visibility: hidden;
   }
-}
-
-@media screen and (max-width: 800px) {
-  .pageWrapper_a3a4ce{
+  .pageWrapper_a3a4ce,
+  .tabBody_c2739c {
     padding-left: var(--sidebar-collapsed);
   }
 
-  .content_cc29d1 > .numberBadge_df8943 { display: none; }
-  li > div.containerDefault_f6f816 div.basicChannelRowLink_d8bfb3:has(.numberBadge_df8943) {
+  .content_cc29d1 > .numberBadge_df8943 {
+    display: none;
+  }
+  li
+    > div.containerDefault_f6f816
+    div.basicChannelRowLink_d8bfb3:has(.numberBadge_df8943) {
     background-color: var(--background-ping);
   }
 
@@ -137,8 +202,43 @@ div[class^="sidebar_"] {
     align-items: center;
     border-radius: 4px;
     height: 42px;
-    padding: 0 8px;
-    min-width: 110px;
+    padding: 0 0 0 8px;
+    min-width: 120px;
+  }
+
+  div[class^="sidebar_"]:hover :is(.avatarWrapper_b2ca13) {
+    margin: 0 8px 0 -2px;
+    padding-left: 2px;
+  }
+
+  div[class^="sidebar_"]:hover :is(.name_d8bfb3) {
+    visibility: visible;
+    width: auto;
+  }
+
+  .name_d8bfb3 {
+    transition: 0.2s ease-in-out;
+    width: 0;
+    visibility: hidden;
+  }
+
+  .list_a478e5 {
+    transition: 0.2s ease-in-out;
+    padding-left: 0;
+    padding-bottom: 4px;
+  }
+
+  .statusDiv_e66732 {
+    transition: 0.2s ease-in-out;
+    height: 0;
+  }
+
+  div[class^="sidebar_"]:hover :is(.statusDiv_e66732) {
+    height: 16px;
+  }
+
+  div[class^="sidebar_"]:hover :is(.list_a478e5) {
+    padding-left: 36px;
   }
 
   .avatar_b2ca13 {
@@ -155,7 +255,7 @@ div[class^="sidebar_"] {
   .nameTag_b2ca13.canCopy_b2ca13 {
     padding-left: 0px;
   }
-  
+
   .searchBar_f0963d > button.searchBarComponent_f0963d {
     color: transparent;
   }
@@ -185,19 +285,22 @@ div[class^="sidebar_"] {
   }
 
   div[class^="sidebar_"]:hover {
-    width: var(--sidebar-extended);
+    width: var(--sidebar-expanded);
     bottom: 0;
-    top: 0; 
+    top: 0;
     z-index: 3;
     position: absolute;
   }
 
-  div[class^="chat_"]{
+  div[class^="chat_"] {
     z-index: 1;
     margin-left: var(--sidebar-collapsed);
   }
-  
-  div[class^="actionButtons_"] { 
+  div[class^="chat_"]:has(aside[class^="membersWrap_"]) main {
+    margin-right: var(--memberlist-collapsed);
+  }
+
+  div[class^="actionButtons_"] {
     display: flex;
   }
 
@@ -214,8 +317,6 @@ div[class^="sidebar_"] {
     margin: 0;
   }
 
-  button[aria-label="Open Soundboard"] { display: none; }
-  
   div[class^="actionButtons_"],
   .wrapper_adcaac > * {
     transition: 0.2s ease-in-out;
@@ -240,5 +341,38 @@ div[class^="sidebar_"] {
     visibility: visible;
     content: "VC";
     color: var(--header-primary);
+  }
+
+  div[class^="container_"]
+    > aside[class^="membersWrap_"]
+    > div[class^="members_"] {
+    transition: width 0.2s ease-in-out;
+    width: var(--memberlist-collapsed);
+  }
+
+  div[class^="container_"]:hover
+    > aside[class^="membersWrap_"]
+    > div[class^="members_"] {
+    width: var(--memberlist-expanded);
+  }
+
+  div[class^="chat_"]
+    div[class^="container_"]:has(aside[class^="membersWrap_"]) {
+    transition: 0.2s ease-in-out;
+    width: var(--memberlist-collapsed);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+  }
+
+  div[class^="chat_"]
+    div[class^="container_"]:has(aside[class^="membersWrap_"]):hover {
+    width: var(--memberlist-expanded);
+  }
+
+  div[class^="container_"] > aside[class^="membersWrap_"] {
+    min-width: 0;
   }
 }
